--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Agenda"
         tools:targetApi="31">
         <activity
+            android:name=".menu_lateral"
+            android:exported="false"
+            android:label="@string/title_activity_menu_lateral"
+            android:theme="@style/Theme.Agenda.NoActionBar" />
+        <activity
             android:name=".view.principal.EventActivity"
             android:exported="false" />
         <activity
