--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Agenda"
         tools:targetApi="31">
         <activity
-            android:name=".menu_lateral"
+            android:name=".view.menu_lateral"
             android:exported="false"
             android:label="@string/title_activity_menu_lateral"
             android:theme="@style/Theme.Agenda.NoActionBar" />
