--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,35 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agenda"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".view.menu_lateral"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_menu_lateral"-->
-<!--            android:theme="@style/Theme.Agenda.NoActionBar" />-->
         <activity
-            android:name=".view.principal.EventActivity"
+            android:name=".view.Mes_Activity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.LoginActivity"
+            android:name=".view.EventActivity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.FormActivity"
+            android:name=".view.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.Mes_Activity"
+            android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.Nova_Conta_Activity"
+            android:name=".view.FormActivity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.UserActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".view.principal.MainActivity"
+            android:name=".view.UserActivity"
             android:exported="false" />
         <activity
-            android:name=".view.principal.Splash"
+            android:name=".view.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
